[fix] overflow issue of account address

--- a/src/components/CreatorPage/CreatorProfile/CreatorProfileComponents/ProfileCard.scss
+++ b/src/components/CreatorPage/CreatorProfile/CreatorProfileComponents/ProfileCard.scss
@@ -4,6 +4,7 @@
   position: relative;
   padding: 3rem 2.5vw 4rem 2.5vw;
   width: 29rem;
+  min-height: 39.5rem;
   margin: 0 2rem 0 0;
   background-color: black;
   border-radius: 12px;
